# event_cunsumer

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_linters.sh  setup.cfg  start.sh
event_consumer/: cl_connect.py  config.py  const.py  db_connect.py  logger.py  main.py  settings.py  topic_workers.py
event_consumer/queries/: user_events.py
event_consumer/schemas/: events.py
event_consumer/utils/: clickhouse.py  kafka_consumer.py
